lib/src/bindings/libsignal_bindings.dart


@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPreKeySignalMessage>,
    ffi.Uint8,
    ffi.Uint32,
    ffi.Uint32,
    ffi.Uint32,
    SignalConstPointerPublicKey,
    SignalConstPointerPublicKey,
    SignalConstPointerSignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_signal_message_new(
  ffi.Pointer<SignalMutPointerPreKeySignalMessage> out,
  int message_version,
  int registration_id,
  int pre_key_id,
  int signed_pre_key_id,
  SignalConstPointerPublicKey base_key,
  SignalConstPointerPublicKey identity_key,
  SignalConstPointerSignalMessage signal_message,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerPreKeySignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_signal_message_get_base_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerPreKeySignalMessage m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerPreKeySignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_signal_message_get_identity_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerPreKeySignalMessage m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSignalMessage>,
    SignalConstPointerPreKeySignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_signal_message_get_signal_message(
  ffi.Pointer<SignalMutPointerSignalMessage> out,
  SignalConstPointerPreKeySignalMessage m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPreKeySignalMessage>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_signal_message_deserialize(
  ffi.Pointer<SignalMutPointerPreKeySignalMessage> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerPreKeySignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_signal_message_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerPreKeySignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeySignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_signal_message_get_registration_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeySignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeySignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_signal_message_get_signed_pre_key_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeySignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeySignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_pre_key_signal_message_get_pre_key_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeySignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerPreKeySignalMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_pre_key_signal_message_get_version(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerPreKeySignalMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderKeyMessage>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_message_deserialize(
  ffi.Pointer<SignalMutPointerSenderKeyMessage> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSenderKeyMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_message_get_cipher_text(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSenderKeyMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSenderKeyMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_message_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSenderKeyMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    SignalConstPointerSenderKeyMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_message_get_distribution_id(
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
  SignalConstPointerSenderKeyMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSenderKeyMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_message_get_chain_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSenderKeyMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSenderKeyMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_message_get_iteration(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSenderKeyMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderKeyMessage>,
    ffi.Uint8,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    ffi.Uint32,
    ffi.Uint32,
    SignalBorrowedBuffer,
    SignalConstPointerPrivateKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_message_new(
  ffi.Pointer<SignalMutPointerSenderKeyMessage> out,
  int message_version,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> distribution_id,
  int chain_id,
  int iteration,
  SignalBorrowedBuffer ciphertext,
  SignalConstPointerPrivateKey pk,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Bool>,
    SignalConstPointerSenderKeyMessage,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_message_verify_signature(
  ffi.Pointer<ffi.Bool> out,
  SignalConstPointerSenderKeyMessage skm,
  SignalConstPointerPublicKey pubkey,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderKeyDistributionMessage>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_deserialize(
  ffi.Pointer<SignalMutPointerSenderKeyDistributionMessage> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSenderKeyDistributionMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_get_chain_key(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSenderKeyDistributionMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerSenderKeyDistributionMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerSenderKeyDistributionMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    SignalConstPointerSenderKeyDistributionMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_get_distribution_id(
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> out,
  SignalConstPointerSenderKeyDistributionMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSenderKeyDistributionMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_get_chain_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSenderKeyDistributionMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerSenderKeyDistributionMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_get_iteration(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerSenderKeyDistributionMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerSenderKeyDistributionMessage>,
    ffi.Uint8,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
    ffi.Uint32,
    ffi.Uint32,
    SignalBorrowedBuffer,
    SignalConstPointerPublicKey,
  )
>()
external ffi.Pointer<SignalFfiError> signal_sender_key_distribution_message_new(
  ffi.Pointer<SignalMutPointerSenderKeyDistributionMessage> out,
  int message_version,
  ffi.Pointer<ffi.Pointer<ffi.Uint8>> distribution_id,
  int chain_id,
  int iteration,
  SignalBorrowedBuffer chainkey,
  SignalConstPointerPublicKey pk,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerSenderKeyDistributionMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_sender_key_distribution_message_get_signature_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerSenderKeyDistributionMessage m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerDecryptionErrorMessage>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_decryption_error_message_deserialize(
  ffi.Pointer<SignalMutPointerDecryptionErrorMessage> out,
  SignalBorrowedBuffer data,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint64>,
    SignalConstPointerDecryptionErrorMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_decryption_error_message_get_timestamp(
  ffi.Pointer<ffi.Uint64> out,
  SignalConstPointerDecryptionErrorMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<ffi.Uint32>,
    SignalConstPointerDecryptionErrorMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_decryption_error_message_get_device_id(
  ffi.Pointer<ffi.Uint32> out,
  SignalConstPointerDecryptionErrorMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalOwnedBuffer>,
    SignalConstPointerDecryptionErrorMessage,
  )
>()
external ffi.Pointer<SignalFfiError> signal_decryption_error_message_serialize(
  ffi.Pointer<SignalOwnedBuffer> out,
  SignalConstPointerDecryptionErrorMessage obj,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPublicKey>,
    SignalConstPointerDecryptionErrorMessage,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_decryption_error_message_get_ratchet_key(
  ffi.Pointer<SignalMutPointerPublicKey> out,
  SignalConstPointerDecryptionErrorMessage m,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerDecryptionErrorMessage>,
    SignalBorrowedBuffer,
    ffi.Uint8,
    ffi.Uint64,
    ffi.Uint32,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_decryption_error_message_for_original_message(
  ffi.Pointer<SignalMutPointerDecryptionErrorMessage> out,
  SignalBorrowedBuffer original_bytes,
  int original_type,
  int original_timestamp,
  int original_sender_device_id,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerDecryptionErrorMessage>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError>
signal_decryption_error_message_extract_from_serialized_content(
  ffi.Pointer<SignalMutPointerDecryptionErrorMessage> out,
  SignalBorrowedBuffer bytes,
);

@ffi.Native<
  ffi.Pointer<SignalFfiError> Function(
    ffi.Pointer<SignalMutPointerPlaintextContent>,
    SignalBorrowedBuffer,
  )
>()
external ffi.Pointer<SignalFfiError> signal_plaintext_content_deserialize(
  ffi.Pointer<SignalMutPointerPlaintextContent> out,
  SignalBorrowedBuffer data,
);
